# dfvs-2022

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: pace-2022-description.bib  pace-2022-description.tex
main/: solver.cpp
main/algorithm/: clique.hpp  component.cpp
main/algorithm/dfvs/: ExactSolver.hpp
main/algorithm/dfvs/branch/: VertexBrancher.hpp
main/algorithm/dfvs/reduction/: Reducer.hpp
main/data/: bitmap.cpp  bitmap.hpp
main/data/graph/: BaseDiGraph.hpp  CLDiGraph.hpp
main/readwrite/: c_pace.cpp  c_pace.hpp
main/util/: functional.hpp  profiler.cpp  profiler.hpp  util.cpp
pace-2019/lib/tools/: CliqueSolverAdapter.h
src/main/algorithm/: clique.cpp  component.hpp  cycle.cpp  cycle.hpp  vertex_cover.cpp  vertex_cover.hpp
src/main/algorithm/dfvs/: Configuration.hpp  HeuristicSolver.hpp  LabeledGraph.hpp
src/main/algorithm/dfvs/bound/: Bounder.hpp
src/main/algorithm/dfvs/branch/: Brancher.hpp  EdgeBrancher.hpp
src/main/data/: IntDisjointSet.hpp  fast_set.cpp  fast_set.hpp
src/main/data/graph/: BaseGraph.hpp  CLDiGraph.cpp  CLGraph.cpp  CLGraph.hpp  graph.hpp
src/main/util/: type_traits.hpp  util.hpp
src/pace-2019/lib/data_structure/: mis_permutation.cpp
src/pace-2019/lib/mis/: exact_mis.cpp
src/pace-2019/lib/mis/kernel/: branch_and_reduce_algorithm.cpp
